[package]
name = "cheque_erp_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"
alcoholic_jwt = "1.0.1"
chrono = "0.4.19"
derive_more = "0.99.17"
diesel = "1.4.8"
dotenv = "0.15.0"
futures = "0.3.21"
r2d2 = "0.8.9"
reqwest = "0.11.10"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
